--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="cards"></div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./GitHubCard/index.js"></script>
   </body>
 </html>
